force-app/main/default/objects/Lead_Score_Tier__c/Lead_Score_Tier__c.object-meta.xml
<CustomObject>
    <description>Defines score-to-tier mappings (e.g. 80-999 = Hot, 50-79 = Warm). Used by LeadScoringEngine to resolve a lead&apos;s tier from its total score.</description>
    <label>Lead Score Tier</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Score Tiers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>