force-app/main/default/objects/Lead_Score_Tier__c/fields/Color__c.field-meta.xml
<CustomField>
    <fullName>Color__c</fullName>
    <description>Hex color code for the tier badge in the designer UI (e.g. #e74c3c for red/Hot, #f39c12 for orange/Warm).</description>
    <label>Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>