force-app/main/default/objects/Lead_Score_Tier__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <description>Maximum score (inclusive) for this tier. A lead with score &gt;= Min_Score and &lt;= Max_Score falls into this tier.</description>
    <label>Max Score</label>
    <precision>8</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>